# fasp

./: .gitignore  README.md  pyproject.toml
fasp/: __main__.py  fasta.py  fastn.py  fastp.py
