[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fasp"
version = "0.1.5"
description = "FASP: A FASTA Processor"
dependencies = [
    "biopython",
]
requires-python = ">=3.8"
authors = [
    {name = "tamasakian", email = "takagawa.masaki.q2@dc.tohoku.ac.jp"}
]
readme = "README.md"
